Fixed overflow issue on ramen png

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
 html,
 body {
   margin: 0;
@@ -78,7 +79,8 @@ figure {
   background-color: rgba(0, 0, 0, 0.437);
   color: rgb(255, 255, 255);
   width: 100%;
-  font-family: "New Rocker", cursive;
+  /* font-family: "New Rocker", cursive; */
+  /* font-family: 'Kaushan Script', cursive; */
 
 }
 
@@ -145,6 +147,8 @@ main{
   }
 }
 
+
+
 .welcome-message{
  
   /* background-color: rgb(110, 0, 0); */
@@ -162,11 +166,11 @@ main{
   font-family: "New Rocker", cursive;
   
   font-family: serif;
-
-  font-weight: 700;
+  font-family: fantasy;
+  font-family: cursive;
+  font-family: 'Kaushan Script', cursive;
+  font-weight: 100;
 }
-
-
 
 .section-one{
   display: flex;
@@ -220,22 +224,36 @@ main{
     height: 300px;
     width: 400px;
     padding-left: 0;
-    margin-left: -81px;
     overflow-x: hidden;
-    display: none;
+    
   }
-
- 
-
-  
-
-
 
   .section-one-h1{
     font-weight: 600;
   font-size: 7vw;
   height: auto;
   }
+}
+
+@media screen and (max-width: 400px) {
+
+
+  main{
+    
+    overflow-x: hidden !important;
+  }
+
+  .section-one{
+    background-image: url('https://images.unsplash.com/photo-1613232683444-de0a4942e932?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjIzfHxub29kbGUlMjByYW1lbnxlbnwwfDB8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60') ;
+  }
+
+  img.ramen-png{
+    height: auto;
+    width: auto;
+    padding-left: 0;
+    overflow-x: hidden !important;
+  }
+
 }
 
 
